--- a/da/Assignment_1_finalized.ipynb
+++ b/da/Assignment_1_finalized.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "Abgabetermin 13. Mai 2024\n",
     "\n",
-    "Teilnehmer: Laura Haas, Nida Kalkat, Max Otto Berth"
+    "Teilnehmer: ---, ---, Max Otto Berth"
    ]
   },
   {
